--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0,user-scalable=no"
     />
-    <title>桂溪</title>
+    <title>桂溪街道数据统计</title>
   </head>
 
   <body>
